Error with keyframe_insert on an UV layer #31631

Closed
opened 2012-05-29 08:20:40 +02:00 by Daniel Salazar · 3 comments
Member

%%%Running this on a mesh with a UV layer:

bpy.context.active_object.data.uv_layers.active.data- [x].keyframe_insert('uv')

gives the following error:

Could not insert keyframe, as RNA Path is invalid for the given ID (ID = MECube, Path = uv_layers["UVMap"].data- [x].uv)%%%

%%%Running this on a mesh with a UV layer: bpy.context.active_object.data.uv_layers.active.data- [x].keyframe_insert('uv') gives the following error: Could not insert keyframe, as RNA Path is invalid for the given ID (ID = MECube, Path = uv_layers["UVMap"].data- [x].uv)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#31631
No description provided.