Fix #31631: keyframe insert on uv layer element not working.