source/blender/makesrna/intern/rna_mesh.c
@@ -1703,6 +1703,12 @@ static void rna_def_mloopuv(BlenderRNA *brna)
 	                                  "rna_iterator_array_end", "rna_iterator_array_get",
 	                                  "rna_MeshUVLoopLayer_data_length", NULL, NULL, NULL);
 
+	prop = RNA_def_property(srna, "name", PROP_STRING, PROP_NONE);
+	RNA_def_struct_name_property(srna, prop);
+	RNA_def_property_clear_flag(prop, PROP_EDITABLE);
+	RNA_def_property_ui_text(prop, "Name", "Name of UV map");
+	RNA_def_property_update(prop, 0, "rna_Mesh_update_data");
+
 	srna = RNA_def_struct(brna, "MeshUVLoop", NULL);
 	RNA_def_struct_sdna(srna, "MLoopUV");
 	RNA_def_struct_path_func(srna, "rna_MeshUVLoop_path");
